# aurora

./: .env.example  .gitignore  DISTRIBUTION.md  PROGRESS.md  README.md  bunfig.toml  eslint.config.mjs  index.html  package.json  vite.config.ts
.claude/: gate.sh
.claude/agents/: ux-qa.md
.conductor/: settings.toml
__tests__/: App.cov.test.tsx  BranchNamingEditor.cov.test.tsx  BranchSwitcher.cov.test.tsx  ChangesView.cov.test.tsx  Connections.cov.test.tsx  DiffRender.cov.test.tsx  EmptyState.cov.test.tsx  FindBar.cov.test.tsx  ManagedServerPane.cov.test.tsx  MigrationBanner.cov.test.tsx  MrSheet.cov.test.tsx  NotifSheet.cov.test.tsx  NotifStack.cov.test.tsx  Pane.cov.test.tsx  PaneGrid.cov.test.tsx  PresetEditor.cov.test.tsx  ScriptsSetupModal.cov.test.tsx  ScriptsSheet.cov.test.tsx  SettingsModal.cov.test.tsx  StatusBar.cov.test.tsx  TabStrip.cov.test.tsx  Terminal.cov.test.tsx  TitleBar.cov.test.tsx  WorkspaceCommand.cov.test.tsx  WorkspaceContextBar.regression.test.tsx  WorkspaceRail.cov.test.tsx  WorkspaceScopeForm.cov.test.tsx  WorkspaceSettings.cov.test.tsx  WorkspaceSwitcher.cov.test.tsx  WorkspaceTour.cov.test.tsx  WorkspacesIntro.cov.test.tsx  aiScripts.cov.test.tsx  ansi.cov.test.tsx  auroraConfig.test.ts  auroraConfigStore.test.ts  branchName.cov.test.tsx  branchNaming.cov.test.tsx  bugfixes.regression.test.tsx  buildCreateSpec.test.ts  commands.cov.test.tsx  (+46 more)
docs/: RELEASE-CHECKLIST.md  workspaces-flow.html  workspaces-flow.mmd  workspaces-reprise-roadmap.md  workspaces-superfluity-audit.md  workspaces-ux-papercuts.md  workspaces-ux.mmd
e2e/: tsconfig.json  wdio.conf.ts
e2e/lib/: harness.ts
e2e/specs/: 00-smoke.e2e.ts  01-first-run.e2e.ts  02-create.e2e.ts  03-switch-rail.e2e.ts  04-changes.e2e.ts  05-teardown.e2e.ts  06-sticky-running.e2e.ts  07-servers.e2e.ts  08-persistence.e2e.ts  09-workspace-tour.e2e.ts
openspec/: project.md
openspec/changes/add-aurora-terminal/: design.md  proposal.md  tasks.md
openspec/changes/ai-generate-repo-scripts/: design.md  proposal.md  tasks.md
openspec/changes/auto-rename-tabs/: design.md  proposal.md  tasks.md
openspec/changes/context-aware-suggestions/: proposal.md  tasks.md
openspec/changes/cut-dead-workspace-surface/: proposal.md  tasks.md
openspec/changes/empty-startup-state/: design.md  proposal.md  tasks.md
openspec/changes/jira-integration/: design.md  proposal.md  tasks.md
openspec/changes/managed-server-lifecycle/: design.md  proposal.md  tasks.md
openspec/changes/responsive-ui-layout/: design.md  proposal.md  tasks.md
openspec/changes/search-output/: design.md  proposal.md  tasks.md
openspec/changes/select-all-output/: design.md  proposal.md  tasks.md
openspec/changes/sticky-running-server-tabs/: design.md  proposal.md  tasks.md
openspec/changes/tab-folder-completion/: design.md  proposal.md  tasks.md
openspec/changes/unify-workspace-create/: proposal.md  tasks.md
openspec/changes/workspace-changes/: design.md  proposal.md  tasks.md
openspec/changes/workspace-config/: design.md  proposal.md  tasks.md
openspec/changes/workspace-create/: design.md  proposal.md  tasks.md
openspec/changes/workspace-port-isolation/: design.md  proposal.md  tasks.md
openspec/changes/workspace-run-servers/: design.md  proposal.md  tasks.md
openspec/changes/workspace-teardown/: proposal.md  tasks.md
openspec/changes/workspaces-core/: design.md  proposal.md  tasks.md
openspec/changes/workspaces-intro-dialog/: design.md  tasks.md
openspec/specs/home-terminal/: spec.md
openspec/specs/merge-request-search/: spec.md
openspec/specs/workspaces-intro-dialog/: spec.md
scripts/: cloud-setup.sh  release-mac.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json  tauri.e2e.conf.json
src-tauri/capabilities/: default.json  e2e.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude.rs  config_watch.rs  git.rs  glab.rs  jira.rs  lib.rs  pty.rs  repoconfig.rs  server.rs  sys.rs
src/ai/: suggest.ts
src/components/: BranchNamingEditor.tsx  BranchSwitcher.tsx  ChangesView.tsx  Connections.tsx  Diff.tsx  EmptyState.tsx  FindBar.tsx  ManagedServerPane.tsx  MigrationBanner.tsx  MrSheet.tsx  NotifSheet.tsx  NotifStack.tsx  Pane.tsx  PaneGrid.tsx  PresetEditor.tsx  ScriptsSetupModal.tsx  ScriptsSheet.tsx  SettingsModal.tsx  StatusBar.tsx  TabStrip.tsx  Terminal.tsx  TitleBar.tsx  TourStage.tsx  WorkspaceCommand.tsx  WorkspaceRail.tsx  WorkspaceScopeForm.tsx  WorkspaceSettings.tsx  WorkspaceSwitcher.tsx  WorkspaceTour.tsx  WorkspacesIntro.tsx
src/lib/: aiScripts.ts  ansi.ts  auroraConfig.ts  auroraConfigStore.ts  branchName.ts  branchNaming.ts  commands.ts  configWatch.ts  connections.ts  create.ts  diff.ts  dirFrecency.ts  envFiles.ts  find.ts  git.ts  jira.ts  keychain.ts  keymap.ts  migrateConnections.ts  notifications.ts  ports.ts  presets.ts  projectContext.ts  repo.ts  repoConfig.ts  running.ts  scripts.ts  scriptsMigration.ts  server.ts  servers.ts  shellQuote.ts  sys.ts  tabNaming.ts  teardown.ts  theme.ts  updater.ts  useMediaQuery.ts  workspace.ts  worktree.ts
src/state/: store.ts
src/styles/: global.css  tokens.css
src/term/: pty.ts  zshInit.ts
test/: cov.ts  fauxBackend.ts  setup.ts
test/mocks/: tauri.ts  xterm.ts
(+40 files in other folders)
