[package]
name = "aurora"
version = "0.2.0"
description = "A real, Claude-powered terminal."
authors = ["Michaël Bernard Romain"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aurora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
portable-pty = "0.8"
base64 = "0.22"
keyring = { version = "3", features = ["apple-native"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.7.1"
# Embedded WebDriver server for e2e (WebdriverIO); registration is debug-gated in lib.rs.
tauri-plugin-wdio-webdriver = "1"
libc = "0.2"

# Release profile: whole-program optimization for the shipped binary.
# `lto` + `codegen-units = 1` let the optimizer inline across crate boundaries
# (base64 encode, serde_json serialization, regex in git/jira parsing) at the
# cost of longer build times. `strip` removes debug symbols → smaller binary
# for notarization/DMG. Pure runtime/size win, no behavior change.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

